# bottle-factory-sim

./: CMakeLists.txt  README.md  package.xml
launch/: bottle_factory.launch.py
scripts/: bottle_spawner.py  bottleneck_detector.py  factory_controller.py
urdf/: bottle.urdf
worlds/: bottle_factory.world
